feat: Improve security and user experience through enhanced JWT token handling and access control
1. Implemented support for JWT tokens obtained from Keycloak, enabling seamless integration with Keycloak authentication services.
2. Expanded access to endpoints, excluding /auth/** and /admin/** paths, to all authenticated users, enhancing usability by allowing broader access.
3. Enhanced JWT token generation to include user roles in the "roles" claim, improving authorization capabilities and enabling role-based access control.
4. Replaced CustomUserDetails with CustomAbstractAuthenticationToken for authentication handling, enhancing code organization and security.
5. Streamlined token validation and generation logic by removing the validateToken function and consolidating it into the getAbstractAuthenticationToken function, ensuring cleaner code structure and maintainability.
6. Augmented getEmailFromToken function to extract email information from Keycloak tokens, enhancing user identification capabilities.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,5 +12,17 @@ spring:
   jpa:
     generate-ddl: true
     show-sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: auth-and-jpa-kfd
+            authorization-grant-type: authorization_code
+            scope: openid
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8080/realms/kotlinAuth
+            user-name-attribute: preferred_username
 
 
