--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/kotlinAuth
+    url: jdbc:postgresql://localhost:5432/kotlin_auth
     username: postgres
     password: user
     driver-class-name: org.postgresql.Driver
